# modbus-rtu-protocol

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: function.rs  response.rs
src/error/: mod.rs  request_packet.rs  response_packet.rs
src/master/: asynced.rs  mod.rs  queued.rs
